--- a/index.html
+++ b/index.html
@@ -1,22 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <!-- CSS do owl-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
+    <!--Responsividades-->
+    <link rel="stylesheet" href="style/responsive.css">
+
     <title>Netflix Clone</title>
 </head>
+
 <body>
-    <header> 
-    <div class="container">
-<h2> NETFLIX</h2>
-<a href="a">Início</a>
-<a href="a">Series</a>
-<a href="a">Filmes</a>
-<a href="a">Documentários</a>
-    </div>    
+    <header>
+        <div class="container">
+            <h2 class="logo"> NETFLIX</h2>
+            <nav>
+                <a href="a">Início</a>
+                <a href="a">Series</a>
+                <a href="a">Filmes</a>
+                <a href="a">Documentários</a>
+            </nav>
+        </div>
     </header>
 
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo"> HOUSE OF CARDS </h3>
+                <p class="descricao"> Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste
+                    drama vencedor do Emmy e do Globo de Ouro.
+                    A 6ª temporada de House of Cards está imperdível.</p>
+
+                <div class="botoes">
+
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                        Assisitir
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        Mais informações
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="carrocel-filmes">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <img class="box-filme" src="img/mini1.jpg" alt="">
+                    <h4>1</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini2.jpg" alt="">
+                    <h4>2</h4>
+                </div>
+                <div  class="item">
+                    <img class="box-filme" src="img/mini3.jpg" alt="">
+                    <h4>3</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini4.jpg" alt="">
+                    <h4>4</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini5.jpg" alt="">
+                    <h4>5</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini6.jpg" alt="">
+                    <h4>6</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini7.jpg" alt="">
+                    <h4>7</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini8.jpg" alt="">
+                    <h4>8</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini9.jpg" alt="">
+                    <h4>9</h4>
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/mini10.jpg" alt="">
+                    <h4>10</h4>
+                </div>
+                
+            </div>
+        </div>
+    </main>
+
+    <script src="https://kit.fontawesome.com/9dbfbe68b7.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
+
 </html>
